add css for div container and to-do-app

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div class="container">
-
+        <div class="to-do-app">
+            <h2>To Do List <img src="img/icon.png"></h2>
+        </div>
     </div>
 </body>
 </html>
