--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <div class="container">
         <div class="to-do-app">
             <h2>To Do List <img src="img/icon.png"></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your text">
+                <button>Add</button>
+            </div>
         </div>
     </div>
 </body>
